# ros4vsn

./: README.md
catkin_ws/src/discrete_move/: CMakeLists.txt  package.xml
catkin_ws/src/discrete_move/config/: discrete_move.yaml
catkin_ws/src/discrete_move/launch/: discrete_server.launch  turtlebot_server.launch
catkin_ws/src/discrete_move/script/: ServerClass.py  discrete_move_joy.py  move_robot.py  server.py  test_move_param.py  test_move_square.py
catkin_ws/src/discrete_move/srv/: DiscreteServer.srv
catkin_ws/src/vsn/: CMakeLists.txt  package.xml
catkin_ws/src/vsn/config/: vsn.yaml
catkin_ws/src/vsn/launch/: vsn.launch
catkin_ws/src/vsn/scripts/: ia.py  image_preprocessing.py  odometry.py  vsn.py  vsn_esanet.py  vsn_pirlnav.py  vsn_rgb.py
examples/PIRLNav/: README.md
examples/pirlnav/: .gitmodules  README.md  class_model.py  install.sh  main.py  run.py
examples/pirlnav/configs/experiments/: il_objectnav.yaml  rl_ft_objectnav.yaml
examples/pirlnav/configs/tasks/: objectnav_hm3d.yaml
examples/pirlnav/imgs/: result.txt
examples/pirlnav/pirlnav/: config.py
examples/pirlnav/pirlnav/algos/: agent.py
examples/pirlnav/pirlnav/policy/: policy.py  visual_policy.py
examples/pirlnav/ros4pirlnav/: image_preprocessing.py  vsn.py
examples/pirlnav/scripts/: 1-objectnav-rl-ft-eval.sh
examples/semnav/: class_model.py
examples/semnav/pirlnav/: config.py  ppo_trainer.py
examples/semnav/ros4pirlnav/: image_preprocessing.py  odometry.py  vsn.py  vsn_esanet.py
scripts/: install_camera.sh  install_turtlebot.sh
(+8 files in other folders)
